--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.8.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
