--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,19 +15,19 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
-      "@/*":["src/*"],
-      "@screens/*":["src/screens/*"],
-      "@styles/*":["src/styles/*"],
-      "@types/*":["src/types/*"],
-      "@actions/*":["src/actions/*"],
-      "@components/*":["src/components/*"],
-      "@constants/*":["src/constants/*"],
-      "@hooks/*":["src/hooks/*"],
-      "@reducers/*":["src/reducers/*"],
-      "@context/*":["src/context/*"],
-      "@utils/*":["src/utils/*"],
+      "@/*":["*"],
+      "@screens/*":["screens/*"],
+      "@styles/*":["styles/*"],
+      "@types/*":["types/*"],
+      "@actions/*":["actions/*"],
+      "@components/*":["components/*"],
+      "@constants/*":["constants/*"],
+      "@hooks/*":["hooks/*"],
+      "@reducers/*":["reducers/*"],
+      "@context/*":["context/*"],
+      "@utils/*":["utils/*"],
     }
   },
   "include": ["src"],
