--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-typescript-template",
+  "name": "kumo-ui",
   "private": true,
   "version": "0.1.0",
   "scripts": {
@@ -8,12 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.4",
     "path": "^0.12.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
